[project]
name = "denia-agent-toolkit"
version = "0.1.0"
description = "Local automation toolkit for graphics and engine workflows."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "mcp[cli]>=1.27.0",
    "pillow>=12.2.0",
    "psutil>=7.2.2",
    "pyautogui>=0.9.54",
    "pywinauto>=0.6.9",
    "pywinctl>=0.4.1",
]
